--- a/app/styles/_m-aboutus.scss
+++ b/app/styles/_m-aboutus.scss
@@ -242,4 +242,38 @@
 	background-repeat: no-repeat;
 	padding-left: 20px;
 	padding-right: 20px;
+	min-height: 135px;
+}
+
+//## ANNUAL REPORTS ##//
+
+.ar-book {
+	width:180px;
+	height: 258px;
+	overflow: hidden;
+	margin:0 auto;
+	/* Mask: */
+	background: #efefef;
+	box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.29);
+
+	@include modular-mq(sm) {
+		float: left;
+		margin-right: 20px;
+	}
+}
+
+.blq-ar-book {
+	clear:both;
+	@include modular-mq(sm) {
+		clear:none;
+	}
+}
+
+.ar-content {
+	clear:both;
+	padding-top: 15px;
+	@include modular-mq(sm) {
+		clear:none;
+		padding-top: 0px;
+	}
 }
