--- a/media.hbs
+++ b/media.hbs
@@ -1,10 +1,8 @@
-{{>nav-mobile-contact-us}}
-
 	<!-- INTRO BLOCK -->
 	<div class="main-intro-section mintro-section-c-blue txt-c overfh m-xl-bottom">
 		<div class="intro-section displayb c-obj c-contrast overfh p-xxl-top p-xxl-bottom">
-			<h3 class="no-m-top m-xs-bottom fbold">{{data.contact.content.title}}</h3>
-			<h4 class="m-s-bottom m-xs-top">{{#labels}}{{contact_us_breadcrumb}}{{/labels}}</h4>
+			<h3 class="no-m-top m-xs-bottom fbold">{{#labels}}{{media_resources}}{{/labels}}</h3>
+			<h4 class="m-s-bottom m-xs-top">{{#labels}}{{contact_media_resources}}{{/labels}}</h4>
 			<div class="c-s-separator-intro c-obj"></div>
 		</div>
 	</div>
@@ -35,8 +33,8 @@
 					<nav>
 						<ul class="n-breadscrumb">
 							<li class="item-bs displayb"><a href="{{host}}" class="item-a-bs avisibility">{{#labels}}{{home}}{{/labels}}</a></li>
-							<li class="item-bs displayb"><a href="#bs" class="item-a-bs">{{#labels}}{{contact_us_breadcrumb}}{{/labels}}</a></li>
-							<li class="item-bs displayb"><a href="#bs" class="item-a-bs item-a-bs-active">{{data.contact.content.title}}</a></li>
+							<li class="item-bs displayb"><a href="#bs" class="item-a-bs">{{#labels}}{{contact_us}}{{/labels}}</a></li>
+							<li class="item-bs displayb"><a href="#bs" class="item-a-bs item-a-bs-active">{{#labels}}{{media_resources}}{{/labels}}</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -44,26 +42,9 @@
 			<!--end Breadcrumb-->
 
 			<div class="row">
-
-				<div class="col-lg-12 col-md-12 col-sm-12 f-merryw no-p-lat-mob">
-
-					<!--
-					<div class="intro-secc-img-big m-l-bottom" style="background-image:url({{data.contact.content.image}});">
-
-
-						<div class="intro-sec-img-content hidden-xs">
-							<p class="c-contrast no-m-bottom txt-xl">{{{data.contact.content.highlighted}}}</p>
-						</div>
-						<div class="intro-secc-img-protector hidden-xs"></div>
-					</div>
-				-->
-
-					<div class="adj-content-mobile post-container">
-						{{{data.contact.content.content}}}
-					</div><!--end adj-content-mobile-->
-
+				<div class="col-lg-12 col-md-12 col-sm-12 post-container">
+					{{{data.media.content}}}
 				</div>
-
 			</div>
 
 		</div>
